--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
     "jquery"
   ],
   "author": "Daniel Yuschick",
-  "licenses": [{
-    "type": "MIT",
-    "url": "https://github.com/brentertz/scapegoat/blob/master/LICENSE-MIT"
-  }],
+  "licenses": [
+    {
+      "type": "MIT",
+      "url": "https://github.com/brentertz/scapegoat/blob/master/LICENSE-MIT"
+    }
+  ],
   "dependencies": {
     "jquery": "^3.2.1",
     "snapsvg": "^0.5.1"
