--- a/package.json
+++ b/package.json
@@ -29,13 +29,12 @@
     "jquery"
   ],
   "author": "Daniel Yuschick",
-  "licenses": [
-    {
-      "type": "MIT",
-      "url": "https://github.com/brentertz/scapegoat/blob/master/LICENSE-MIT"
-    }
-  ],
+  "licenses": [{
+    "type": "MIT",
+    "url": "https://github.com/brentertz/scapegoat/blob/master/LICENSE-MIT"
+  }],
   "dependencies": {
+    "imports-loader": "^0.7.1",
     "jquery": "^3.2.1",
     "snapsvg": "^0.5.1"
   }
