--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "snapfoo",
-  "version": "2.1.1",
+  "version": "2.1.2",
   "description": "SnapFoo is an animation library that compliments Snap.svg to simplify the SVG animation process.",
   "main": "index.js",
   "scripts": {
@@ -29,10 +29,12 @@
     "jquery"
   ],
   "author": "Daniel Yuschick",
-  "licenses": [{
-    "type": "MIT",
-    "url": "https://github.com/brentertz/scapegoat/blob/master/LICENSE-MIT"
-  }],
+  "licenses": [
+    {
+      "type": "MIT",
+      "url": "https://github.com/brentertz/scapegoat/blob/master/LICENSE-MIT"
+    }
+  ],
   "dependencies": {
     "imports-loader": "^0.7.1",
     "jquery": "^3.2.1",
